# olisar

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  RELEASING.md  SETUP.md  pyproject.toml
.github/workflows/: image.yml  release.yml
api/: main.py  schemas.py  trust.py
api/auth/: deps.py  oauth.py  sessions.py
api/routers/: admin.py  bot.py  dev.py  extensions.py  knowledge.py  marketplace.py  settings.py  setup.py  tunnel.py  usage.py
bot/: access.py  actions.py  client.py  content.py  main.py  replies.py  triggers.py
bot/cogs/: context_channels.py  conversation.py  events.py  guilds.py  killswitch.py  members.py  memory_worker.py  moderation.py  presence.py  proactive.py  reminders.py  sdk_commands.py  sdk_events.py  search_index.py  self_destruct.py  slash.py  star_citizen.py  welcome.py
deploy/: .env.example  Dockerfile  README.md  bootstrap.sh  docker-compose.yml
desktop/: README.md  SETUP.md  backend.spec  main.js  package.json  preload.js  updater.js
desktop/funnel-sidecar/: go.mod  main.go
desktop/resources/: README.md
docs/: docs.html  index.html
icons/ico.icon/: icon.json
icons/ico_brand.icon/: icon.json
marketplace-extensions/: _publish.py  directory.js  events.js  gameservers.js  polls.js  tags.js  timezone.js
olisar/: access.py  audit.py  catchup.py  config.py  context.py  discord_app.py  discord_bio.py  guild_setup.py  imaging.py  logbuffer.py  messages.py  moderation.py  persona.py  pipeline.py  proactivity.py  runtime_config.py  runtime_keys.py  tools.py  updates.py
olisar/db/: engine.py  models.py
olisar/extensions/: __init__.py  base.py  builtin.py  bundle.py  review.py  sdk_loader.py  signing.py  star_citizen.py  user_registry.py  welcome.py
olisar/gemini/: client.py  (+4 more)
registry/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  schema.sql  wrangler.jsonc
scripts/: check_release_version.py  init_db.py
web/: .env.example  DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+55 files in other folders)
